@@ -3,9 +3,9 @@
 # "./check.sh" without arguments will validate lang and styles files
 # specified here.
 
-langs="automake.lang c.lang cpp.lang def.lang html.lang \
-       javascript.lang latex.lang makefile.lang xml.lang \
-       yacc.lang"
+langs="automake.lang c.lang cpp.lang changelog.lang def.lang \
+       html.lang javascript.lang latex.lang makefile.lang \
+       xml.lang yacc.lang"
 
 styles="gvim.styles kde.styles"
 
